--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -5,14 +5,22 @@ build-std = ["core", "compiler_builtins"]
 [build]
 target = "x86_64-r2.json"
 
+[profile.dev]
+panic = "abort"
+debug = true
+opt-level = 0
+lto = false
+
+
 [target.x86_64-r2]
 runner = "qemu-system-x86_64"
 rustflags = [
-  "-C", "link-arg=-Tlinker.ld"
+  "-C", "link-arg=-Tlinker.ld",
+  "-C", "debuginfo=2"
 ]
 
 # [target.'cfg(target_os = "none")']
 # runner = "bootimage runner"
 # rustflags = [
-#   "-C", "link-arg=-Tlinker.ld"
+#   "-C", "link-arg=-Tlinker.ld",
 # ]
